// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works 2 bbcodes 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          Object {
            "fontStyle": "italic",
          },
        ]
      }
      testID="bbcode-italic"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello
    </Text>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          Object {
            "fontWeight": "bold",
          },
        ]
      }
      testID="bbcode-bold"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      dude
    </Text>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
       wassup
    </Text>
  </View>
</View>
`;

exports[`works with bold bbcode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello 
    </Text>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          Object {
            "fontWeight": "bold",
          },
        ]
      }
      testID="bbcode-bold"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      dude
    </Text>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
       wassup
    </Text>
  </View>
</View>
`;

exports[`works with no bbcode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello dude
    </Text>
  </View>
</View>
`;

exports[`works with quote bbcode and more text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "background-basic-color-1",
          },
          Array [
            Object {
              "borderRadius": 8,
              "borderWidth": 2,
              "padding": 16,
            },
            Object {
              "borderColor": "#C5CEE0",
            },
          ],
        ]
      }
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      <Text
        appearance="default"
        category="p1"
        style={
          Array [
            Object {
              "color": "#ff2",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            Object {
              "fontStyle": "italic",
            },
          ]
        }
        testID="bbcode-quote-name"
        theme={
          Object {
            "text-basic-color": "#ff2",
            "text-primary-color": "#fff",
          }
        }
      >
        Foo
         wrote:
      </Text>
      <Text
        appearance="default"
        category="p1"
        style={
          Array [
            Object {
              "color": "#ff2",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            undefined,
          ]
        }
        testID="bbcode-quote-text"
        theme={
          Object {
            "text-basic-color": "#ff2",
            "text-primary-color": "#fff",
          }
        }
      >
        <Text
          appearance="default"
          category="p1"
          style={
            Array [
              Object {
                "color": "#ff2",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
                "lineHeight": 20,
              },
              undefined,
            ]
          }
          testID="bbcode-plain"
          theme={
            Object {
              "text-basic-color": "#ff2",
              "text-primary-color": "#fff",
            }
          }
        >
          hello, world
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`works with quote bbcode and name 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "background-basic-color-1",
          },
          Array [
            Object {
              "borderRadius": 8,
              "borderWidth": 2,
              "padding": 16,
            },
            Object {
              "borderColor": "#C5CEE0",
            },
          ],
        ]
      }
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      <Text
        appearance="default"
        category="p1"
        style={
          Array [
            Object {
              "color": "#ff2",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            Object {
              "fontStyle": "italic",
            },
          ]
        }
        testID="bbcode-quote-name"
        theme={
          Object {
            "text-basic-color": "#ff2",
            "text-primary-color": "#fff",
          }
        }
      >
        Foo
         wrote:
      </Text>
      <Text
        appearance="default"
        category="p1"
        style={
          Array [
            Object {
              "color": "#ff2",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            undefined,
          ]
        }
        testID="bbcode-quote-text"
        theme={
          Object {
            "text-basic-color": "#ff2",
            "text-primary-color": "#fff",
          }
        }
      >
        <Text
          appearance="default"
          category="p1"
          style={
            Array [
              Object {
                "color": "#ff2",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
                "lineHeight": 20,
              },
              undefined,
            ]
          }
          testID="bbcode-plain"
          theme={
            Object {
              "text-basic-color": "#ff2",
              "text-primary-color": "#fff",
            }
          }
        >
          hello, world
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`works with quote bbcode and nested text bbcodes 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "background-basic-color-1",
          },
          Array [
            Object {
              "borderRadius": 8,
              "borderWidth": 2,
              "padding": 16,
            },
            Object {
              "borderColor": "#C5CEE0",
            },
          ],
        ]
      }
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      <Text
        appearance="default"
        category="p1"
        style={
          Array [
            Object {
              "color": "#ff2",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            Object {
              "fontStyle": "italic",
            },
          ]
        }
        testID="bbcode-quote-name"
        theme={
          Object {
            "text-basic-color": "#ff2",
            "text-primary-color": "#fff",
          }
        }
      >
        Foo
         wrote:
      </Text>
      <Text
        appearance="default"
        category="p1"
        style={
          Array [
            Object {
              "color": "#ff2",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            undefined,
          ]
        }
        testID="bbcode-quote-text"
        theme={
          Object {
            "text-basic-color": "#ff2",
            "text-primary-color": "#fff",
          }
        }
      >
        <Text
          appearance="default"
          category="p1"
          style={
            Array [
              Object {
                "color": "#ff2",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
                "lineHeight": 20,
              },
              Object {
                "fontStyle": "italic",
              },
            ]
          }
          testID="bbcode-italic"
          theme={
            Object {
              "text-basic-color": "#ff2",
              "text-primary-color": "#fff",
            }
          }
        >
          Hello
        </Text>
        <Text
          appearance="default"
          category="p1"
          style={
            Array [
              Object {
                "color": "#ff2",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
                "lineHeight": 20,
              },
              Object {
                "fontWeight": "bold",
              },
            ]
          }
          testID="bbcode-bold"
          theme={
            Object {
              "text-basic-color": "#ff2",
              "text-primary-color": "#fff",
            }
          }
        >
          dude
        </Text>
        <Text
          appearance="default"
          category="p1"
          style={
            Array [
              Object {
                "color": "#ff2",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
                "lineHeight": 20,
              },
              undefined,
            ]
          }
          testID="bbcode-plain"
          theme={
            Object {
              "text-basic-color": "#ff2",
              "text-primary-color": "#fff",
            }
          }
        >
           wassup
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`works with quote bbcode and no name 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "background-basic-color-1",
          },
          Array [
            Object {
              "borderRadius": 8,
              "borderWidth": 2,
              "padding": 16,
            },
            Object {
              "borderColor": "#C5CEE0",
            },
          ],
        ]
      }
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      <Text
        appearance="default"
        category="p1"
        style={
          Array [
            Object {
              "color": "#ff2",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            undefined,
          ]
        }
        testID="bbcode-quote-text"
        theme={
          Object {
            "text-basic-color": "#ff2",
            "text-primary-color": "#fff",
          }
        }
      >
        <Text
          appearance="default"
          category="p1"
          style={
            Array [
              Object {
                "color": "#ff2",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
                "lineHeight": 20,
              },
              undefined,
            ]
          }
          testID="bbcode-plain"
          theme={
            Object {
              "text-basic-color": "#ff2",
              "text-primary-color": "#fff",
            }
          }
        >
          hello, world
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`works with quote bbcode, name in quotes 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      appearance="default"
      level="1"
      style={
        Array [
          Object {
            "backgroundColor": "background-basic-color-1",
          },
          Array [
            Object {
              "borderRadius": 8,
              "borderWidth": 2,
              "padding": 16,
            },
            Object {
              "borderColor": "#C5CEE0",
            },
          ],
        ]
      }
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      <Text
        appearance="default"
        category="p1"
        style={
          Array [
            Object {
              "color": "#ff2",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            Object {
              "fontStyle": "italic",
            },
          ]
        }
        testID="bbcode-quote-name"
        theme={
          Object {
            "text-basic-color": "#ff2",
            "text-primary-color": "#fff",
          }
        }
      >
        Foo
         wrote:
      </Text>
      <Text
        appearance="default"
        category="p1"
        style={
          Array [
            Object {
              "color": "#ff2",
              "fontFamily": "System",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 20,
            },
            undefined,
          ]
        }
        testID="bbcode-quote-text"
        theme={
          Object {
            "text-basic-color": "#ff2",
            "text-primary-color": "#fff",
          }
        }
      >
        <Text
          appearance="default"
          category="p1"
          style={
            Array [
              Object {
                "color": "#ff2",
                "fontFamily": "System",
                "fontSize": 15,
                "fontWeight": "400",
                "lineHeight": 20,
              },
              undefined,
            ]
          }
          testID="bbcode-plain"
          theme={
            Object {
              "text-basic-color": "#ff2",
              "text-primary-color": "#fff",
            }
          }
        >
          hello, world
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`works with url and link text bbcode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello 
    </Text>
    <Text
      appearance="default"
      category="p1"
      status="primary"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-url"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      DUDE
    </Text>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
       wassup
    </Text>
  </View>
</View>
`;

exports[`works with url auto matcher 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello
    </Text>
    <Text
      appearance="default"
      category="p1"
      status="primary"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-url"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      https://dude.com
    </Text>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      wassup
    </Text>
  </View>
</View>
`;

exports[`works with url auto matcher, query params 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello
    </Text>
    <Text
      appearance="default"
      category="p1"
      status="primary"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-url"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      https://dude.com/?foo=bar
    </Text>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      wassup
    </Text>
  </View>
</View>
`;

exports[`works with url auto matcher, trailing slash 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello
    </Text>
    <Text
      appearance="default"
      category="p1"
      status="primary"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-url"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      https://dude.com/
    </Text>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      wassup
    </Text>
  </View>
</View>
`;

exports[`works with url bbcode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello 
    </Text>
    <Text
      appearance="default"
      category="p1"
      status="primary"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-url"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      https://dude.com
    </Text>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
       wassup
    </Text>
  </View>
</View>
`;

exports[`works with url in quotes and link text bbcode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello 
    </Text>
    <Text
      appearance="default"
      category="p1"
      status="primary"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-url"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      DUDE
    </Text>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
       wassup
    </Text>
  </View>
</View>
`;

exports[`works with youtube auto replace (long domain) 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello
    </Text>
    <Text
      appearance="default"
      category="p1"
      status="primary"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-url"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      https://youtube.com/watch?v=123
    </Text>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      wassup
    </Text>
  </View>
</View>
`;

exports[`works with youtube auto replace (short domain) 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello
    </Text>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <RNCWebView
        allowsInlineMediaPlayback={true}
        cacheEnabled={true}
        domStorageEnabled={true}
        injectedJavaScriptBeforeContentLoadedForMainFrameOnly={true}
        injectedJavaScriptForMainFrameOnly={true}
        javaScriptEnabled={true}
        messagingEnabled={false}
        source={
          Object {
            "uri": "https://www.youtube.com/embed/123 wassup?playsinline=1&fs=1",
          }
        }
        style={
          Array [
            Object {
              "flex": 1,
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#ffffff",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID="bbcode-youtube"
        useSharedProcessPool={true}
      />
    </View>
  </View>
</View>
`;

exports[`works with youtube bbcode 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
      Hello 
    </Text>
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <RNCWebView
        allowsInlineMediaPlayback={true}
        cacheEnabled={true}
        domStorageEnabled={true}
        injectedJavaScriptBeforeContentLoadedForMainFrameOnly={true}
        injectedJavaScriptForMainFrameOnly={true}
        javaScriptEnabled={true}
        messagingEnabled={false}
        source={
          Object {
            "uri": "https://www.youtube.com/embed/123?playsinline=1&fs=1",
          }
        }
        style={
          Array [
            Object {
              "flex": 1,
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#ffffff",
            },
            Object {
              "flex": 1,
            },
          ]
        }
        testID="bbcode-youtube"
        useSharedProcessPool={true}
      />
    </View>
    <Text
      appearance="default"
      category="p1"
      style={
        Array [
          Object {
            "color": "#ff2",
            "fontFamily": "System",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 20,
          },
          undefined,
        ]
      }
      testID="bbcode-plain"
      theme={
        Object {
          "text-basic-color": "#ff2",
          "text-primary-color": "#fff",
        }
      }
    >
       wassup
    </Text>
  </View>
</View>
`;
